fixed the css and the html to align my elements horizontally

--- a/src/style.css
+++ b/src/style.css
@@ -93,33 +93,40 @@ font-weight: 800;}
 strong {
     color: #8c20adfd;
 }
-.weather-forecast{
-display: flex;
+.weather-forecasts {
+    display: flex; 
+    justify-content: center; 
+    
+    margin: 0 ;
+    max-width: 100%;
 }
+.weather-forecast {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    margin: 10px; 
+    text-align: center; 
+    }
 
-.weather-forecast-day{
-    text-align: center;
+.weather-forecast-day {
     line-height: 20px;
     font-size: 16px;
-    margin-bottom: 10px;
+}
 
+.weather-forecast-icon {
+    font-size: 38px;
 }
-.weather-forecast-icon{
-text-align: center;
-font-size: 38px;
 
+.weather-forecast-temperatures {
+    color: #8c20adfd;
+    display: flex;
+    justify-content: center; 
+    margin-top: 10px;
 }
-.weather-forecast-temperatures{
-text-align: center;
-color: #8c20adfd;
-display: flex;
-justify-content: center;
-margin-top: 10px;
-}
-.weather-forecast-temperature{
+
+.weather-forecast-temperature {
     padding: 0 10px;
 }
-
 footer {
     
     padding-top: 20px; 
